--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "word-game",
   "version": "0.1.0",
   "private": true,
-  "author": "Josh Comeau <me@joshwcomeau.com>",
+  "author": "Syed Hussain Ather <shussainather@gmail.com>",
   "dependencies": {
     "new-component": "4.0.0",
     "prettier": "^2.6.2",
